# Multi-Agent-Data-Context-Trust-Layer

./: .env.example  .gitignore  Procfile  README.md  pyproject.toml  railway.toml  requirements.txt
.cursor/plans/: agentic_context_layer_c6757cf2.plan.md
samples/: ecommerce.csv  ecommerce.sql
src/context_layer/: __init__.py  __main__.py  api.py  graph.py  llm.py  run_logger.py
src/context_layer/agents/: __init__.py  _retry.py  aggregator.py  input_parser.py  lineage.py  pii_detector.py  profiler.py  semantic.py  trust_scorer.py
src/context_layer/models/: __init__.py  outputs.py  schema.py  state.py
templates/: demo.html  report.html
tests/: test_pipeline.py
