[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-context-layer"
version = "0.1.0"
description = "Multi-agent LangGraph pipeline that generates a trusted context layer for structured data schemas"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.4",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.3",
    "langchain-core>=0.3",
    "fastapi>=0.115",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "jinja2",
    "rich",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[tool.setuptools.packages.find]
where = ["src"]
